--- a/config/tiboard.conf
+++ b/config/tiboard.conf
@@ -9,7 +9,7 @@ CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Uncomment this line below to add rgb underglow / backlight support
-# CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW=y
 
 # Uncomment the line below to disable external power toggling by the underglow.
 # By default toggling the underglow on and off also toggles external power
@@ -22,11 +22,11 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # switch to the default zmk branch
 #
 
-# # Disable external power when not connected to USB
-# CONFIG_ZMK_EXT_POWER_USB_ONLY=n
+# Disable external power when not connected to USB
+# CONFIG_ZMK_EXT_POWER_USB_ONLY=y
 
-# # Automatically turn off underglow when keyboard is not touched for 30s 
-# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+# Automatically turn off underglow when keyboard is not touched for 30s 
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
 
 
@@ -40,7 +40,7 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # CONFIG_ZMK_MOUSE_PS2_TP_INVERT_X=y
 # CONFIG_ZMK_MOUSE_PS2_ENABLE_CLICKING=n
 # CONFIG_ZMK_MOUSE_PS2_TP_TAP_TO_SELECT=n
-
+CONFIG_ZMK_MOUSE_PS2_TP_TAP_TO_SELECT=y
 #
 # Logging
 #
