--- a/config/tiboard.conf
+++ b/config/tiboard.conf
@@ -4,6 +4,12 @@
 # Uncomment the following line to enable the Sofle OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
+# Deep Sleep after 15min of inactivity
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+
 # Uncomment these two lines to add support for encoders
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
@@ -28,8 +34,6 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Automatically turn off underglow when keyboard is not touched for 30s 
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-
-
 
 #
 # Configure PS2 Mouse Settings
