--- a/config/west.yml
+++ b/config/west.yml
@@ -8,7 +8,7 @@ manifest:
   projects:
     - name: zmk
       remote: infused-kim
-      revision: sofle
+      revision: pr-testing/mouse_ps2
       import: app/west.yml
   self:
     path: config
