--- a/config/boards/shields/tiboard/tiboard.dtsi
+++ b/config/boards/shields/tiboard/tiboard.dtsi
@@ -69,24 +69,74 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5) RC(4,5) RC(4,6) RC(3,6) RC(3,7) 
     };
 };
 
-&pro_micro_i2c {
-    status = "okay";
+// &pro_micro_i2c {
+//     status = "okay";
 
-    oled: ssd1306@3c {
-        compatible = "solomon,ssd1306fb";
-        reg = <0x3c>;
-        label = "DISPLAY";
-        width = <128>;
-        height = <32>;
-        segment-offset = <0>;
-        page-offset = <0>;
-        display-offset = <0>;
-        multiplex-ratio = <31>;
-        segment-remap;
-        com-invdir;
-        com-sequential;
-        prechargep = <0x22>;
-    };
+//     oled: ssd1306@3c {
+//         compatible = "solomon,ssd1306fb";
+//         reg = <0x3c>;
+//         label = "DISPLAY";
+//         width = <128>;
+//         height = <32>;
+//         segment-offset = <0>;
+//         page-offset = <0>;
+//         display-offset = <0>;
+//         multiplex-ratio = <31>;
+//         segment-remap;
+//         com-invdir;
+//         com-sequential;
+//         prechargep = <0x22>;
+//     };
+// };
+
+
+// &pinctrl {
+//        i2c0_default: i2c0_default {
+//                group1 {
+//                        psels = <NRF_PSEL(TWIM_SDA, 0, 4)>,
+//                                <NRF_PSEL(TWIM_SCL, 0, 5)>;
+//                };
+//        };
+
+//        i2c0_sleep: i2c0_sleep {
+//                group1 {
+//                        psels = <NRF_PSEL(TWIM_SDA, 0, 4)>,
+//                                <NRF_PSEL(TWIM_SCL, 0, 5)>;
+//                        low-power-enable;
+//                };
+//        };
+// };
+
+display_i2c: &i2c0 {
+    compatible = "nordic,nrf-twi";
+    pinctrl-0 = <&i2c0_default>;
+    pinctrl-1 = <&i2c0_sleep>;
+    pinctrl-names = "default", "sleep";
+ };
+ 
+&display_i2c {
+ 	status = "okay";
+	oled: ssd1306@3c {
+		compatible = "solomon,ssd1306fb";
+		reg = <0x3c>;
+		label = "DISPLAY";
+		width = <128>;
+		height = <32>;
+		segment-offset = <0>;
+		page-offset = <0>;
+		display-offset = <0>;
+		multiplex-ratio = <31>;
+		segment-remap;
+		com-invdir;
+		com-sequential;
+		prechargep = <0x22>;
+	};
+};
+
+/ {
+  chosen {
+    zephyr,display = &oled;
+  };
 };
 
 
