--- a/config/boards/shields/tiboard/tiboard.dtsi
+++ b/config/boards/shields/tiboard/tiboard.dtsi
@@ -90,22 +90,22 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5) RC(4,5) RC(4,6) RC(3,6) RC(3,7) 
 // };
 
 
-// &pinctrl {
-//        i2c0_default: i2c0_default {
-//                group1 {
-//                        psels = <NRF_PSEL(TWIM_SDA, 0, 4)>,
-//                                <NRF_PSEL(TWIM_SCL, 0, 5)>;
-//                };
-//        };
+&pinctrl {
+	i2c0_default: i2c0_default {
+		group1 {
+			psels = <NRF_PSEL(TWIM_SDA, 0, 15)>,
+				<NRF_PSEL(TWIM_SCL, 0, 17)>;
+		};
+	};
 
-//        i2c0_sleep: i2c0_sleep {
-//                group1 {
-//                        psels = <NRF_PSEL(TWIM_SDA, 0, 4)>,
-//                                <NRF_PSEL(TWIM_SCL, 0, 5)>;
-//                        low-power-enable;
-//                };
-//        };
-// };
+	i2c0_sleep: i2c0_sleep {
+		group1 {
+			psels = <NRF_PSEL(TWIM_SDA, 0, 15)>,
+				<NRF_PSEL(TWIM_SCL, 0, 17)>;
+			low-power-enable;
+		};
+	};
+};
 
 display_i2c: &i2c0 {
     compatible = "nordic,nrf-twi";
