--- a/config/tiboard.conf
+++ b/config/tiboard.conf
@@ -24,18 +24,11 @@ CONFIG_WS2812_STRIP=y
 # CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-#
-# The features below are added by the sofle fork and won't work if you
-# switch to the default zmk branch
-#
-
-# Disable external power when not connected to USB
-# CONFIG_ZMK_EXT_POWER_USB_ONLY=y
 
 # Automatically turn off underglow when keyboard is not touched for 30s 
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
-#
+
 # Configure PS2 Mouse Settings
 #
 
@@ -45,7 +38,8 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 # CONFIG_ZMK_MOUSE_PS2_TP_INVERT_X=y
 # CONFIG_ZMK_MOUSE_PS2_ENABLE_CLICKING=n
 # CONFIG_ZMK_MOUSE_PS2_TP_TAP_TO_SELECT=n
-CONFIG_ZMK_MOUSE_PS2_TP_TAP_TO_SELECT=y
+CONFIG_ZMK_MOUSE_PS2_TP_TAP_TO_SELECT=y #not working
+
 #
 # Logging
 #
