--- a/config/boards/shields/tiboard/tiboard.dtsi
+++ b/config/boards/shields/tiboard/tiboard.dtsi
@@ -140,29 +140,29 @@ display_i2c: &i2c0 {
 };
 
 
-// The PS/2 GPIO and mouse drivers.
-/ {
-    gpio_ps2: gpio_ps2 {
-		status = "disabled";
-        compatible = "gpio-ps2";
+// // The PS/2 GPIO and mouse drivers.
+// / {
+//     gpio_ps2: gpio_ps2 {
+// 		status = "disabled";
+//         compatible = "gpio-ps2";
 
-        // 
-        scl-gpios = <&pro_micro 4 0>;
-        sda-gpios = <&pro_micro 0 0>;
-    };
-};
+//         // 
+//         scl-gpios = <&pro_micro 4 0>;
+//         sda-gpios = <&pro_micro 0 0>;
+//     };
+// };
 
-/ {
-    mouse_ps2: mouse_ps2 {
-		status = "disabled";
-        compatible = "zmk,mouse-ps2";
-        ps2-device = <&gpio_ps2>;
+// / {
+//     mouse_ps2: mouse_ps2 {
+// 		status = "disabled";
+//         compatible = "zmk,mouse-ps2";
+//         ps2-device = <&gpio_ps2>;
 
-        // Uncomment this if you have an extra free pin and
-        // want the controller to perform the Power-On-Reset
-        // instead of using a reset circuit.
-        //
-        // The bottom right pin of the nice!nano (when it is facing down)
-        // rst-gpios = <&pro_micro 9 0>;
-    };
-};
+//         // Uncomment this if you have an extra free pin and
+//         // want the controller to perform the Power-On-Reset
+//         // instead of using a reset circuit.
+//         //
+//         // The bottom right pin of the nice!nano (when it is facing down)
+//         // rst-gpios = <&pro_micro 9 0>;
+//     };
+// };
