--- a/config/tiboard.conf
+++ b/config/tiboard.conf
@@ -26,7 +26,7 @@ CONFIG_WS2812_STRIP=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Automatically turn off underglow when keyboard is not touched for 30s 
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 
 
 # Configure PS2 Mouse Settings
@@ -38,7 +38,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 # CONFIG_ZMK_MOUSE_PS2_TP_INVERT_X=y
 # CONFIG_ZMK_MOUSE_PS2_ENABLE_CLICKING=n
 # CONFIG_ZMK_MOUSE_PS2_TP_TAP_TO_SELECT=n
-CONFIG_ZMK_MOUSE_PS2_TP_TAP_TO_SELECT=y #not working
+# CONFIG_ZMK_MOUSE_PS2_TP_TAP_TO_SELECT=y #not working
 
 #
 # Logging
