--- a/config/west.yml
+++ b/config/west.yml
@@ -3,12 +3,10 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: infused-kim
-      url-base: https://github.com/infused-kim
   projects:
     - name: zmk
-      remote: infused-kim
-      revision: pr-testing/mouse_ps2
+      remote: zmkfirmware
+      revision: main
       import: app/west.yml
   self:
     path: config
