--- a/config/tiboard.conf
+++ b/config/tiboard.conf
@@ -17,7 +17,7 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
-CONFIG_ZMK_EXT_POWER_USB_ONLY=n
+# CONFIG_ZMK_EXT_POWER_USB_ONLY=n #error
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
 
 # Uncomment the line below to disable external power toggling by the underglow.
