--- a/config/tiboard.conf
+++ b/config/tiboard.conf
@@ -1,8 +1,11 @@
 # Copyright (c) 2020 Ryan Cross
 # SPDX-License-Identifier: MIT
-
+CONFIG_FPU=y
 # Uncomment the following line to enable the Sofle OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_SYSTEM=y
+CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 
 # Deep Sleep after 15min of inactivity
 CONFIG_ZMK_SLEEP=y
@@ -28,6 +31,7 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Automatically turn off underglow when keyboard is not touched for 30s 
 # CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+
 
 
 # Configure PS2 Mouse Settings
