--- a/config/boards/shields/tiboard/tiboard.conf
+++ b/config/boards/shields/tiboard/tiboard.conf
@@ -7,7 +7,16 @@
 # Uncomment these two lines to add support for encoders
 # CONFIG_EC11=y
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
-
+CONFIG_ZMK_DISPLAY=y
+CONFIG_I2C=y
+CONFIG_SSD1306=y
+CONFIG_SSD1306_REVERSE_MODE=y
+CONFIG_LVGL_HOR_RES_MAX=128
+CONFIG_LVGL_VER_RES_MAX=32
+CONFIG_LVGL_VDB_SIZE=64
+CONFIG_LVGL_DPI=148
+CONFIG_LVGL_BITS_PER_PIXEL=1
+CONFIG_LVGL_DISPLAY_DEV_NAME="DISPLAY"
 #
 # Configure PS2 Mouse Settings
 #
