--- a/config/tiboard.conf
+++ b/config/tiboard.conf
@@ -1,10 +1,8 @@
 # Copyright (c) 2020 Ryan Cross
 # SPDX-License-Identifier: MIT
-CONFIG_FPU=y
+
 # Uncomment the following line to enable the Sofle OLED Display
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
-CONFIG_ZMK_DISPLAY_WORK_QUEUE_SYSTEM=y
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 
 # Deep Sleep after 15min of inactivity
@@ -20,7 +18,7 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
-# CONFIG_ZMK_EXT_POWER_USB_ONLY=n #error
+# CONFIG_ZMK_EXT_POWER_USB_ONLY=n #error in offical zmk
 
 # Uncomment the line below to disable external power toggling by the underglow.
 # By default toggling the underglow on and off also toggles external power
