--- a/config/west.yml
+++ b/config/west.yml
@@ -5,10 +5,11 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: infused-kim
       url-base: https://github.com/infused-kim
-  projects:
-    - name: zmk
+projects:
+    - name: zmk-zephyr
       remote: infused-kim
-      revision: sofle
+      revision: v2.5.0+zmk-fixes+kim-fixes
+      clone-depth: 1
       import: app/west.yml
   self:
     path: config
