--- a/build.yaml
+++ b/build.yaml
@@ -12,5 +12,8 @@
 #     shield: reviung41
 #
 ---
-board: [ "nrfmicro_13" ]
-shield: [ "tiboard_left", "tiboard_right" ]
+include:
+  - board: nrfmicro_13
+    shield: tiboard_left
+  - board: nrfmicro_13
+    shield: tiboard_right
